[package]
name = "rdf-canon"
authors = ["yamdan"]
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = "0.2"
itertools = "0.11"
oxrdf = { git = "https://github.com/oxigraph/oxigraph.git", rev = "922023b" } # will be fixed once next version of oxrdf is published on crates.io
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
oxttl = { git = "https://github.com/oxigraph/oxigraph.git", rev = "922023b" } # will be fixed once oxttl is published on crates.io
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
log = ["tracing-subscriber"]
