[package]
name = "rdf-canon"
authors = ["yamdan"]
version = "0.15.0-alpha.1"
edition = "2021"
description = "A Rust implementation of the RDF Dataset Canonicalization algorithm version 1.0 (RDFC-1.0) compatible with Oxigraph and Oxrdf."
homepage = "https://github.com/zkp-ld/rdf-canon"
repository = "https://github.com/zkp-ld/rdf-canon"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2", features = ["alloc"] }
itertools = "0.12"
oxrdf = "0.2.0-alpha"
digest = "0.10"
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
oxttl = "0.1.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
log = ["tracing-subscriber"]
